feat: rebrand assistants as agents

--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -18,9 +18,9 @@
   "homepage": "https://continue.dev",
   "qna": "https://github.com/continuedev/continue/issues/new/choose",
   "license": "Apache-2.0",
-  "displayName": "Continue - open-source AI code assistant",
+  "displayName": "Continue - open-source AI code agent",
   "pricing": "Free",
-  "description": "The leading open-source AI code assistant",
+  "description": "The leading open-source AI code agent",
   "publisher": "Continue",
   "engines": {
     "vscode": "^1.70.0",
