--- a/actions/detailed-review/action.yml
+++ b/actions/detailed-review/action.yml
@@ -12,12 +12,71 @@ inputs:
   continue-config:
     description: 'Config path to use (e.g., "myorg/review-bot")'
     required: true
+  use_github_app:
+    description: 'Use Continue Agent GitHub App for bot identity (requires app installation)'
+    default: 'true'
+    required: false
 
 runs:
   using: 'composite'
   steps:
+    - name: Generate Continue Agent App Token
+      if: inputs.use_github_app == 'true'
+      id: app-token
+      uses: actions/create-github-app-token@v2
+      with:
+        app-id: ${{ vars.CONTINUE_APP_ID }}
+        private-key: ${{ secrets.CONTINUE_APP_PRIVATE_KEY }}
+      continue-on-error: true
+
+    - name: Verify App Installation
+      if: inputs.use_github_app == 'true' && steps.app-token.outcome == 'failure'
+      shell: bash
+      run: |
+        echo "::error::Continue Agent GitHub App is not installed or configured properly"
+        echo ""
+        echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+        echo "🤖 Continue Agent App Setup Required"
+        echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+        echo ""
+        echo "To enable Continue reviews with proper bot identity:"
+        echo ""
+        echo "1. 📱 Install the Continue Agent app:"
+        echo "   https://github.com/apps/continue-agent"
+        echo ""
+        echo "2. 🔑 Configure repository secrets and variables:"
+        echo "   • Secret: CONTINUE_APP_PRIVATE_KEY (your app's private key)"
+        echo "   • Variable: CONTINUE_APP_ID (your app's ID)"
+        echo ""
+        echo "3. ✅ Ensure the app has access to this repository"
+        echo ""
+        echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+        echo "💡 Quick Fix Options:"
+        echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+        echo ""
+        echo "• For immediate use without the app, add to your workflow:"
+        echo "  use_github_app: false"
+        echo ""
+        echo "• For help, see: https://github.com/continuedev/continue/actions"
+        echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+        exit 1
+
+    - name: Set GitHub Token
+      shell: bash
+      run: |
+        # Use app token if available, otherwise use standard token
+        if [ "${{ inputs.use_github_app }}" = "true" ] && [ "${{ steps.app-token.outcome }}" = "success" ]; then
+          echo "GH_TOKEN=${{ steps.app-token.outputs.token }}" >> $GITHUB_ENV
+          echo "Using Continue Agent app token for GitHub operations"
+        else
+          echo "GH_TOKEN=${{ github.token }}" >> $GITHUB_ENV
+          echo "Using standard GitHub Actions token"
+        fi
+
     - name: Checkout Repository
       uses: actions/checkout@v4
+      with:
+        token: ${{ env.GH_TOKEN }}
 
     - name: Check Authorization
       shell: bash
@@ -78,8 +137,6 @@ runs:
     - name: Build Inline Review Prompt
       if: env.SKIP_REVIEW != 'true'
       shell: bash
-      env:
-        GH_TOKEN: ${{ github.token }}
       run: |
         # Get PR number based on event type
         if [ "${{ github.event_name }}" = "pull_request" ]; then
@@ -223,6 +280,7 @@ runs:
       if: env.SKIP_REVIEW != 'true'
       uses: actions/github-script@v7
       with:
+        github-token: ${{ env.GH_TOKEN }}
         script: |
           const fs = require('fs');
 
@@ -358,8 +416,6 @@ runs:
             console.log('Failed to post review:', error.message);
             console.log('Error details:', error);
           }
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
 
     - name: Upload Review Artifacts
       if: env.SKIP_REVIEW != 'true' && always()
