--- a/actions/general-review/action.yml
+++ b/actions/general-review/action.yml
@@ -1,24 +1,24 @@
-name: 'Continue PR Review'
-description: 'Automated code review for pull requests using Continue CLI'
-author: 'Continue Dev, Inc.'
+name: "Continue PR Review"
+description: "Automated code review for pull requests using Continue CLI"
+author: "Continue Dev, Inc."
 
 inputs:
   continue-api-key:
-    description: 'API key for Continue service'
+    description: "API key for Continue service"
     required: true
   continue-org:
-    description: 'Organization for Continue config'
+    description: "Organization for Continue config"
     required: true
   continue-config:
     description: 'Config path to use (e.g., "myorg/review-bot")'
     required: true
   use_github_app:
-    description: 'Use Continue Agent GitHub App for bot identity (requires app installation)'
-    default: 'true'
+    description: "Use Continue Agent GitHub App for bot identity (requires app installation)"
+    default: "true"
     required: false
 
 runs:
-  using: 'composite'
+  using: "composite"
   steps:
     - name: Generate Continue Agent App Token
       if: inputs.use_github_app == 'true'
@@ -85,8 +85,13 @@ runs:
         HAS_TRIGGER_PHRASE: ${{ contains(github.event.comment.body, '@continue-general-review') }}
       run: |
         # Check if this action should run based on event type and user permissions
+        # TODO: Future improvement - consolidate into a single action that responds to 
+        # @continue-agent mentions with smart heuristics to determine review type:
+        # - "@continue-agent" or "@continue-agent review" -> general review
+        # - "@continue-agent detailed" or similar keywords -> detailed review
+        # This would provide a more natural bot interaction similar to Claude or GitHub Copilot
         SHOULD_RUN="false"
-        
+
         if [ "${{ github.event_name }}" = "pull_request" ]; then
           # Check if PR is a draft
           if [ "${{ github.event.pull_request.draft }}" = "true" ]; then
@@ -115,7 +120,7 @@ runs:
         else
           echo "::notice::Skipping review - Unsupported event type: ${{ github.event_name }}"
         fi
-        
+
         echo "SHOULD_RUN=$SHOULD_RUN" >> $GITHUB_ENV
 
     - name: Setup Node.js
@@ -219,7 +224,7 @@ runs:
           echo "Error: Invalid organization name. Must contain only alphanumeric characters, hyphens, and underscores."
           exit 1
         fi
-        
+
         if [[ ! "$CONTINUE_CONFIG" =~ ^[a-zA-Z0-9_/-]+$ ]]; then
           echo "Error: Invalid config path. Must contain only alphanumeric characters, hyphens, underscores, and forward slashes."
           exit 1
@@ -287,5 +292,5 @@ runs:
           }
 
 branding:
-  icon: 'code'
-  color: 'blue'
+  icon: "code"
+  color: "blue"
