--- a/actions/general-review/action.yml
+++ b/actions/general-review/action.yml
@@ -16,17 +16,23 @@ inputs:
     description: "Use Continue Agent GitHub App for bot identity (requires app installation)"
     default: "true"
     required: false
+  app_id:
+    description: "GitHub App ID (required if use_github_app is true)"
+    required: false
+  app_private_key:
+    description: "GitHub App Private Key (required if use_github_app is true)"
+    required: false
 
 runs:
   using: "composite"
   steps:
     - name: Generate Continue Agent App Token
-      if: inputs.use_github_app == 'true'
+      if: inputs.use_github_app == 'true' && inputs.app_id != '' && inputs.app_private_key != ''
       id: app-token
       uses: actions/create-github-app-token@v2
       with:
-        app-id: ${{ vars.CONTINUE_APP_ID }}
-        private-key: ${{ secrets.CONTINUE_APP_PRIVATE_KEY }}
+        app-id: ${{ inputs.app_id }}
+        private-key: ${{ inputs.app_private_key }}
       continue-on-error: true
 
     - name: Verify App Installation
