fix: use CONTINUE_APP_ID and CONTINUE_APP_PRIVATE_KEY secrets
- Both app-id and app-private-key are now passed as secrets
- Removed default app-id value
- Updated test workflow to use proper secret names
- Users need to set CONTINUE_APP_ID and CONTINUE_APP_PRIVATE_KEY in their repo secrets

--- a/actions/base-review/action.yml
+++ b/actions/base-review/action.yml
@@ -7,11 +7,10 @@ inputs:
     description: "API key for Continue service (required)"
     required: true
   app-id:
-    description: "GitHub App ID (optional, defaults to Continue's app)"
+    description: "GitHub App ID (optional)"
     required: false
-    default: "1090372"  # Continue Agent App ID
   app-private-key:
-    description: "GitHub App Private Key (optional, defaults to Continue's app)"
+    description: "GitHub App Private Key (optional)"
     required: false
 
 runs:
