chore: update Continue config to use review-bot profile
- Changed config from 'continuedev/clean-code' to 'continuedev/review-bot'
- Uses the dedicated review bot configuration

--- a/actions/base-review/action.yml
+++ b/actions/base-review/action.yml
@@ -81,7 +81,7 @@ runs:
       with:
         continue-api-key: ${{ inputs.continue-api-key }}
         continue-org: "continuedev"
-        continue-config: "continuedev/clean-code"
+        continue-config: "continuedev/review-bot"
         github-token: ${{ steps.app-token.outputs.token || github.token }}
 
 branding:
