feat: add github-token input parameter to base-review action
- Added github-token as optional input parameter
- Prioritizes passed github-token over generated app token
- Allows users to provide their own GitHub App token from workflow
- Maintains backward compatibility with existing workflows

This enables workflows to generate GitHub App tokens externally and pass them to the action, allowing comments to appear from the GitHub App bot even when the action doesn't have direct access to app credentials.

--- a/actions/base-review/action.yml
+++ b/actions/base-review/action.yml
@@ -12,6 +12,9 @@ inputs:
   app-private-key:
     description: "GitHub App Private Key (optional)"
     required: false
+  github-token:
+    description: "GitHub token for API access (optional - for posting comments with GitHub App)"
+    required: false
 
 runs:
   using: "composite"
@@ -82,7 +85,7 @@ runs:
         continue-api-key: ${{ inputs.continue-api-key }}
         continue-org: "continuedev"
         continue-config: "continuedev/review-bot"
-        github-token: ${{ steps.app-token.outputs.token || github.token }}
+        github-token: ${{ inputs.github-token || steps.app-token.outputs.token || github.token }}
 
 branding:
   icon: "code"
